--- a/Marvel/src/main/res/layout/item_comic_book.xml
+++ b/Marvel/src/main/res/layout/item_comic_book.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/item_comic_margin">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/icb_image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:maxHeight="@dimen/item_comic_max_height"
+        android:maxWidth="@dimen/item_comic_max_width"
         android:visibility="visible"/>
 
     <TextView
