--- a/Marvel/src/main/res/values/dimens.xml
+++ b/Marvel/src/main/res/values/dimens.xml
@@ -4,4 +4,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="item_comic_margin">5dp</dimen>
+    <dimen name="item_comic_max_height">70dp</dimen>
+    <dimen name="item_comic_max_width">40dp</dimen>
+
 </resources>
