--- a/Marvel/src/main/res/layout/item_comic_book.xml
+++ b/Marvel/src/main/res/layout/item_comic_book.xml
@@ -1,22 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/item_comic_height"
+    android:padding="@dimen/item_comic_margin">
 
     <ImageView
         android:id="@+id/icb_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:maxHeight="@dimen/item_comic_max_height"
-        android:maxWidth="@dimen/item_comic_max_width"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_comic_height"
+        android:scaleType="center"
         android:visibility="visible"/>
 
     <TextView
         android:id="@+id/icb_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:textColor="@android:color/black"
+        android:textSize="10sp"
+        android:typeface="normal"
+        android:textStyle="bold"
+        android:shadowColor="@android:color/white"
+        android:shadowRadius="7"
         android:visibility="visible"/>
 
-</LinearLayout>
+</RelativeLayout>
